--- a/Neo.Matrix/Neo.Matrix.csproj
+++ b/Neo.Matrix/Neo.Matrix.csproj
@@ -11,6 +11,7 @@
     <PackageLicenseUrl>https://github.com/klyse/Neo.Matrix/blob/master/LICENSE</PackageLicenseUrl>
     <PackageProjectUrl>https://github.com/klyse/Neo.Matrix</PackageProjectUrl>
     <RootNamespace>NeoMatrix</RootNamespace>
+    <Version>1.1.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Debug|netcoreapp2.2|AnyCPU'">
