--- a/Neo.Matrix.Test/Neo.Matrix.Test.csproj
+++ b/Neo.Matrix.Test/Neo.Matrix.Test.csproj
@@ -6,6 +6,10 @@
     <IsPackable>false</IsPackable>
 
     <RootNamespace>NeoMatrix.Test</RootNamespace>
+
+    <AssemblyVersion>1.0.0.0</AssemblyVersion>
+
+    <FileVersion>1.0.0.0</FileVersion>
   </PropertyGroup>
 
   <ItemGroup>
