--- a/Neo.Matrix.Test/Neo.Matrix.Test.csproj
+++ b/Neo.Matrix.Test/Neo.Matrix.Test.csproj
@@ -1,25 +1,19 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netcoreapp2.2</TargetFramework>
+	<PropertyGroup>
+		<TargetFramework>netcoreapp3.0</TargetFramework>
+		<IsPackable>false</IsPackable>
+		<RootNamespace>NeoMatrix.Test</RootNamespace>
+	</PropertyGroup>
 
-    <IsPackable>false</IsPackable>
+	<ItemGroup>
+		<PackageReference Include="nunit" Version="3.11.0"/>
+		<PackageReference Include="NUnit3TestAdapter" Version="3.12.0"/>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0"/>
+	</ItemGroup>
 
-    <RootNamespace>NeoMatrix.Test</RootNamespace>
-
-    <AssemblyVersion>1.0.0.0</AssemblyVersion>
-
-    <FileVersion>1.0.0.0</FileVersion>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <PackageReference Include="nunit" Version="3.11.0" />
-    <PackageReference Include="NUnit3TestAdapter" Version="3.12.0" />
-    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Neo.Matrix\Neo.Matrix.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="..\Neo.Matrix\Neo.Matrix.csproj"/>
+	</ItemGroup>
 
 </Project>
