--- a/Neo.Matrix/Neo.Matrix.csproj
+++ b/Neo.Matrix/Neo.Matrix.csproj
@@ -6,7 +6,7 @@
 		<Authors>derKlyse</Authors>
 		<Description>This is a small Matrix helper</Description>
 		<RepositoryUrl>https://github.com/klyse/Neo.Matrix</RepositoryUrl>
-		<PackageLicenseUrl>https://github.com/klyse/Neo.Matrix/blob/master/LICENSE</PackageLicenseUrl>
+		<License>https://github.com/klyse/Neo.Matrix/blob/master/LICENSE</License>
 		<PackageProjectUrl>https://github.com/klyse/Neo.Matrix</PackageProjectUrl>
 		<RootNamespace>NeoMatrix</RootNamespace>
 		<Version>1.4.0</Version>
