--- a/Neo.Matrix/Neo.Matrix.csproj
+++ b/Neo.Matrix/Neo.Matrix.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netcoreapp2.2;netcoreapp3.0;netstandard2.0;net472</TargetFrameworks>
+		<TargetFramework>netstandard2.1</TargetFramework>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
 		<Authors>derKlyse</Authors>
 		<Description>This is a small Matrix helper</Description>
@@ -17,7 +17,7 @@
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="System.Drawing.Common" Version="4.6.1"/>
+		<PackageReference Include="System.Drawing.Common" Version="4.6.1" />
 	</ItemGroup>
 
 </Project>
