--- a/Neo.Matrix.Test/Neo.Matrix.Test.csproj
+++ b/Neo.Matrix.Test/Neo.Matrix.Test.csproj
@@ -3,17 +3,17 @@
 	<PropertyGroup>
 		<TargetFramework>netcoreapp3.0</TargetFramework>
 		<IsPackable>false</IsPackable>
-		<RootNamespace>Neo.Matrix.Test</RootNamespace>
+		<RootNamespace>NeoMatrix.Test</RootNamespace>
 	</PropertyGroup>
 
 	<ItemGroup>
-		<PackageReference Include="nunit" Version="3.12.0" />
-		<PackageReference Include="NUnit3TestAdapter" Version="3.15.1" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0" />
+		<PackageReference Include="nunit" Version="3.12.0"/>
+		<PackageReference Include="NUnit3TestAdapter" Version="3.15.1"/>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.4.0"/>
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\Neo.Matrix\Neo.Matrix.csproj" />
+		<ProjectReference Include="..\Neo.Matrix\Neo.Matrix.csproj"/>
 	</ItemGroup>
 
 </Project>
