--- a/Neo.Matrix/Neo.Matrix.csproj
+++ b/Neo.Matrix/Neo.Matrix.csproj
@@ -1,9 +1,12 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFramework>netstandard2.1</TargetFramework>
+		<TargetFramework>net5.0</TargetFramework>
 		<GeneratePackageOnBuild>true</GeneratePackageOnBuild>
-		<Authors>derKlyse</Authors>
+		<Nullable>enable</Nullable>
+		<GenerateDocumentationFile>true</GenerateDocumentationFile>
+
+		<Authors>Klyse</Authors>
 		<Description>This is a small Matrix helper</Description>
 		<RepositoryUrl>https://github.com/klyse/Neo.Matrix</RepositoryUrl>
 		<License>https://github.com/klyse/Neo.Matrix/blob/master/LICENSE</License>
@@ -12,12 +15,8 @@
 		<Version>1.4.3</Version>
 	</PropertyGroup>
 
-	<PropertyGroup>
-		<DocumentationFile>.\Neo.Matrix.xml</DocumentationFile>
-	</PropertyGroup>
-
 	<ItemGroup>
-		<PackageReference Include="System.Drawing.Common" Version="4.6.1"/>
+		<PackageReference Include="System.Drawing.Common" Version="5.0.0" />
 	</ItemGroup>
 
 </Project>
