--- a/Neo.Matrix.Test/Neo.Matrix.Test.csproj
+++ b/Neo.Matrix.Test/Neo.Matrix.Test.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net5.0</TargetFramework>
 		<IsPackable>false</IsPackable>
+		<Nullable>enable</Nullable>
 		<RootNamespace>NeoMatrix.Test</RootNamespace>
 	</PropertyGroup>
 
