added internal attribute

--- a/src/Neo.Matrix/Neo.Matrix.csproj
+++ b/src/Neo.Matrix/Neo.Matrix.csproj
@@ -22,4 +22,9 @@
 		<PackageReference Include="System.Drawing.Common" Version="5.0.0" />
 	</ItemGroup>
 
+	<ItemGroup>
+		<AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+			<_Parameter1>$(AssemblyName).Test</_Parameter1>
+		</AssemblyAttribute>
+	</ItemGroup>
 </Project>
